# simple_model_predictive_control

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-APACHE  README.md
.cargo/: config.toml
examples/: acrobot.rs  cartpole.rs  cartpole_mpc.rs  simple_continuous.rs  simple_discrete.rs
src/: dynamics_optimizer.rs  dynamics_problem.rs  lib.rs  mpc_controller.rs  mpc_controller_builder.rs  mpc_problem.rs  mpc_problem_builder.rs  prelude.rs
src/test/: integration_tests.rs  mod.rs  unit_tests.rs
