[package]
name = "simple_model_predictive_control"
version = "0.1.0"
edition = "2024"
authors = ["Henry Gerard Moore"]
description = "A simple implementation of model predictive control in pure Rust"
repository = "https://github.com/henrygerardmoore/simple_model_predictive_control"
license = "MIT OR Apache-2.0"
keywords = ["mpc","model-predictive-control","model-predictive","argmin","nonlinear","control"]

[dependencies]
argmin = {version="0.11.0", features=["rayon"]}
argmin-math = {version = "0.5.1", features = ["ndarray_latest"]}
argmin-observer-slog = "0.2.0"
env_logger = "0.11.8"
log = "0.4.28"
ndarray = {version = "0.16", features = ["rayon", "serde"]}
ndarray-linalg = { version = "0.17", features = ["intel-mkl-static"] }
plotters = "0.3.7"
